# Tamil-Project

./: README.md
tamil_heritage_agent/: README.md  agent.py  main.py  pyproject.toml
tamil_heritage_agent/data/: heritage_seed.json
tamil_heritage_agent/docs/: prompt.md
tamil_heritage_agent/skills/tamil_heritage/: instructions.md
tamil_heritage_agent/static/: app.js  index.html  styles.css
tamil_heritage_agent/tamil_heritage_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tamil_heritage_agent/tests/: test_seed_tools.py
