[project]
name = "tamil-heritage-agent"
version = "0.1.0"
description = "Tamil-first multi-agent cultural heritage assistant built with the OpenAI Agents SDK."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "openai-agents>=0.3.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.30.0",
]

[project.scripts]
tamil-heritage-agent = "main:cli"

[tool.setuptools]
py-modules = ["agent", "main"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
